   Patch: Frank Gevaerts
+- Bound Ctrl-R to reload.
 - Made dialogs use font_factor (e.g. view source).
 - Implemented the SELECT element in FORMS!
 - Implemented MULTIPLE SELECT in FORMS.
   Patches: Jeremy Henty
+- Added int32_t, EAI_NODATA and iconv tests for FreeBSD.
   Patch: Thomas-Martin Seck
+- Made CTRL-l focus the location bar instead of popping up a dialog.
 - Set key bindings to its modifiers when alone only.
   Patches: Justus Winter

 TODO:

 - test no_proxy (set a list in dillorc).

-----------------------------------------------------------------------------


0.8.5-pre-dw-redesign-1 [internal]
- Prototype

dillo-0.8.3-pre-dw-redesign-3 [Aug 30, 2004]
 - * Fixed bug GtkDwViewport, which caused some redraws to be ignored.
   * Added GdkDwPreview.
   Patches: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-2 [Aug 28, 2004]
 - * Added images to the current state of the redesign.
     - New module Imgbuf, see doc/Imgbuf.txt for details.
   Patch: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-1 [Aug 25, 2004]
 - * Introduced an abstraction layer between Dw and Gtk+. See README-port and
     doc/DwRender.txt for more details.
   Patch: Sebastian Geerken


=============================================================================
Dillo project
=============================================================================


dillo-0.8.6 [Apr 26, 2006]

 - * Designed and implemented a dpi protocol library (libDpip.a in /dpip).
   * Added a couple of new dpip commands.
   * Fixed and uniformed the escaping of values inside dpip tags.
   * Ported the bookmarks, download, file, https, ftp and hello plugins,
     plus the dpid daemon and the rest of the source tree to use it.
   * Improved the dpi buffer reception to handle split buffers (This was
     required for handling arbitrary data streams with dpip).
   * Fixed a bug in Cache_entry_remove_raw.
   * Added a couple of "const" and C++ wrappers to dpiutil's API.